# cmake_protobuf_example

./: CMakeLists.txt
proto/: CMakeLists.txt  head.proto  kv.proto
src/: CMakeLists.txt  main.cpp
